# deprecated-imports

./: .gitmodules  .pre-commit-config.yaml  README.rst  pyproject.toml
src/deprecated_imports/: cpython_doc_parser.py
src/deprecated_imports/cpython_doc_parser/: __init__.py  core.py  main.py  sphinx.py
